--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,6 +1,7 @@
-
-@import "font";
+@import "fonts";
 @import "vars";
 @import "generics";
 @import "utils";
 @import "header";
+@import "main";
+@import "footer";
