--- a/resources/scss/_header.scss
+++ b/resources/scss/_header.scss
@@ -1,35 +1,47 @@
 header{
-    margin: 0 auto;
-    .addictional{
-       display: flex;
-       justify-content: end;
-       background-color: $primary;
-       padding: 0;
-       color: white;
-       height: 40px;
+    .info-nav{
+        background-color: $primary_blu;
+        color: $wht-dc;
+        text-align: end;
     }
-
-    .navbar{
-
+    .nav{
         display: flex;
-        justify-content: space-around;
-        figure{
-            text-align: center;
-            padding-top: 5px;
-        }
-    }
-
-    ul{
-        display: flex;
+        justify-content: space-between;
         align-items: center;
-        padding: 0;
-        margin: 50px 0;
-        li{
-            list-style: none;
-            font-weight: bold;
-            a{
-                padding: 10px;
+        margin:5px auto;
+        figure{
+            padding: 4px 0;
+        }
+        ul{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0;
+            margin: 30px 0;
+            li{
+                list-style: none;
+                a {
+                        padding: 10px;
+                        color: $bk-dc;
+                        text-decoration: none;
+
+                
+                        &:hover,
+                        &.active {
+                            border-bottom: 3px solid $primary_blu;
+                            color: $primary_blu;
+                            
+                        }
+                    }
             }
+            
         }
     }
+    .jumbotron{
+        background-image: url('/public/images/jumbotron.jpg');
+        background-repeat: no-repeat;
+        height: 300px;
+        background-size: cover;
+    }
+
 }
