--- a/resources/scss/_vars.scss
+++ b/resources/scss/_vars.scss
@@ -1,3 +1,6 @@
-$primary: rgb(2, 130, 249);
-$dark-gray: rgb(28, 28, 28);
-$main-font: 'Roboto',sans-serif;
+// Colors
+$primary_blu: #0082F9;
+$bk-dc:#1C1C1C;
+$bk-footer:#303030;
+$wht-dc:#FFFFFF;
+$main-font:'Oswald', sans-serif;
